fixed layout issues

--- a/css/home.css
+++ b/css/home.css
@@ -17,7 +17,7 @@ body {
 .main-container {
   display: flex;
   flex: 1;
-  height: 100vh;
+  height: 100%;
   color: var(--text-gray);
 }
 
@@ -35,7 +35,7 @@ body {
 .right-section {
   flex: 1;
   padding: 1.5rem;
-  height: 100vh;
+  height: 100%;
   overflow-y: auto;
 }
 
@@ -412,7 +412,7 @@ body {
   .left-section {
     flex: 1;
     border-right: none;
-    padding-bottom: 7rem;
+    padding-bottom: 9rem;
   }
 
   .mobile-header {
