--- a/css/layout.css
+++ b/css/layout.css
@@ -6,6 +6,8 @@
 }
 * {
   font-family: "Product Sans", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 *::-webkit-scrollbar {
@@ -24,10 +26,25 @@ body {
     "Helvetica Neue", Arial;
   color: #434343;
 }
+#app {
+  height: 100dvh;
+}
 
+.bottom-nav {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 12px 0;
+  justify-content: space-around;
+  background: #fff;
+  border-top: 1px solid var(--border-shadow);
+  gap: 8px;
+  z-index: 100;
+}
 .sidebar {
   width: 250px;
-  height: 100vh;
+  height: 100dvh;
   padding-top: 24px;
   padding-bottom: 24px;
   padding-left: 16px;
@@ -82,19 +99,6 @@ body {
   font-weight: 700;
 }
 
-.bottom-nav {
-  position: fixed;
-  bottom: -12px;
-  left: 0;
-  width: 100%;
-  padding: 12px 0;
-  justify-content: space-around;
-  background: #fff;
-  border-top: 1px solid var(--border-shadow);
-  gap: 8px;
-  z-index: 100;
-}
-
 .bottom-item {
   flex: 1 1 0%;
   min-width: 0;
@@ -125,7 +129,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   background: #fff;
   z-index: 10;
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.06);
